--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+  <meta name="revisit-after" content="15 days">
+  <meta name="author" content="_lmmmmmm" />
+  <meta property="description" content="_lmmmmmm, Front-end Developer.">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="develop, front-end, lmmmmmm" />
+  <meta property="og:title" content="_lmmmmmm">
+  <meta property="og:image" content="https://lmmmmmm.me/avatar.png">
+  <meta property="og:description" content="_lmmmmmm, Front-end Developer.">
+  <meta property="description" content="_lmmmmmm, Front-end Developer.">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:creator" content="@_lmmmmmm">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>_lmmmmmm</title>
+  <link rel="canonical" href="https://lmmmmmm.me/">
+  <title>Hi, _lmmmmmm</title>
   <script>
     (function () {
       const darkSchema = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
