--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="revisit-after" content="15 days" />
+    <meta name="author" content="_lmmmmmm" />
+    <meta property="description" content="_lmmmmmm, Front-end Developer." />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="keywords" content="develop, front-end, _lmmmmmm" />
+    <meta property="og:title" content="_lmmmmmm" />
+    <meta property="og:image" content="https://lmmmmmm.me/avatar.png" />
+    <meta property="og:description" content="_lmmmmmm, Front-end Developer." />
+    <meta property="description" content="_lmmmmmm, Front-end Developer." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@_lmmmmmm" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+    <link rel="canonical" href="https://lmmmmmm.me/" />
+    <title>Hi, _lmmmmmm</title>
+    <script>
+      const colorSchema = window.matchMedia('(prefers-color-scheme: dark)');
+      const darkSchema = window.matchMedia && colorSchema.matches;
+      document.documentElement.classList.toggle('dark', darkSchema);
+      colorSchema.addEventListener('change', () =>
+        document.documentElement.classList.toggle('dark', colorSchema.matches)
+      );
+    </script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="revisit-after" content="15 days">
-  <meta name="author" content="_lmmmmmm" />
-  <meta property="description" content="_lmmmmmm, Front-end Developer.">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="keywords" content="develop, front-end, lmmmmmm" />
-  <meta property="og:title" content="_lmmmmmm">
-  <meta property="og:image" content="https://lmmmmmm.me/avatar.png">
-  <meta property="og:description" content="_lmmmmmm, Front-end Developer.">
-  <meta property="description" content="_lmmmmmm, Front-end Developer.">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:creator" content="@_lmmmmmm">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="https://lmmmmmm.me/">
-  <title>Hi, _lmmmmmm</title>
-  <script>
-    (function () {
-      const darkSchema = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
-      document.documentElement.classList.toggle('dark', darkSchema)
-    })()
-  </script>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
