--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         document.documentElement.classList.toggle('dark', colorSchema.matches);
       });
     </script>
+    <!-- google analysis -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QT8ZNPGH9X"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-QT8ZNPGH9X');
+    </script>
   </head>
 
   <body>
