--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="_lmmmmmm, Front-end Developer." />
     <meta name="twitter:creator" content="@_lmmmmmm" />
-    <meta name="twitter:image" content="https://lmmmmmm.me/avatar.png" />
+    <meta name="twitter:image" content="https://lmmmmmm.me/avatar.jpg" />
+    <meta name="twitter:image:alt" content="lmmmmmm's avatar" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="_lmmmmmm" />
     <meta property="og:url" content="https://lmmmmmm.me" />
-    <meta property="og:image" content="https://lmmmmmm.me/avatar.png" />
+    <meta property="og:image" content="https://lmmmmmm.me/avatar.jpg" />
     <meta property="og:description" content="_lmmmmmm, Front-end Developer." />
     <link rel="canonical" href="https://lmmmmmm.me/" />
     <title>_lmmmmmm</title>
