chore: index comment

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
   </head>
 
   <body>
+    <!-- Nice to meet you and welcome to visit my GitHub -->
+    <!-- https://github.com/Lmmmmmm-bb -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
