--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
       gtag('config', 'G-QT8ZNPGH9X');
     </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
 
   <body>
