feat: umami analyze

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       gtag('config', 'G-QT8ZNPGH9X');
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
+    <script async src="https://analyze.lmmmmmm.dev/script.js" data-website-id="e9576c70-694e-4a68-b480-9de7c5cf9abc"></script>
   </head>
 
   <body>
