--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         document.documentElement.classList.toggle('dark', colorSchema.matches);
       });
     </script>
+    <!-- analyze -->
     <script defer src="/_vercel/insights/script.js"></script>
-    <script async src="https://analyze.lmmmmmm.dev/script.js" data-website-id="e9576c70-694e-4a68-b480-9de7c5cf9abc"></script>
+    <script async src="https://analyze.lmmmmmm.dev/script.js" data-website-id="39208d0e-0259-464e-9a70-6c7c88ff680f"></script>
   </head>
 
   <body>
