chore: clean up

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- seo -->
-    <meta name="revisit-after" content="15 days" />
     <meta name="author" content="_lmmmmmm" />
     <meta name="description" content="_lmmmmmm, Front-end Developer." />
     <meta name="msapplication-TileColor" content="#da532c" />
@@ -59,7 +58,7 @@
   </head>
 
   <body>
-    <!-- Nice to meet you and welcome to visit my GitHub -->
+    <!-- Nice to meet you~ -->
     <!-- https://github.com/Lmmmmmm-bb -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
